--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -12,6 +12,7 @@ jobs:
 
   setup-ECR:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: checkout code
         uses: actions/checkout@v4
