fixed cd in terraform init step

--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: terraform init
         run: |
-          cd ./terraform
+          cd /terraform
           terraform init
         working-directory: ./terraform
         
