--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -29,10 +29,8 @@ jobs:
         
 
       - name: terraform init
-        run: |
-          
-          terraform init
-        working-directory: /terraform
+        run: terraform init
+        working-directory: terraform
         
       - name: terraform apply
         id: ecr-repo
