--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -30,13 +30,14 @@ jobs:
 
       - name: terraform init
         run: terraform init
-        working-directory: terraform
+        working-directory: ./terraform
         
       - name: terraform apply
         id: ecr-repo
         run: |
           terraform fmt
           terraform apply -auto-approve
+        working-directory: ./terraform
 
       - name: Cache Terraform providers
         uses: actions/cache@v3
