--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -31,7 +31,18 @@ jobs:
       - name: terraform init
         run: terraform init
         working-directory: ./terraform
-        
+
+      - name: Import Existing ECR (if any) # Check if ECR exists, then import to avoid recreation
+        run: |
+          if aws ecr describe-repositories --repository-names your-ecr-repo-name --region us-east-1 >/dev/null 2>&1; then
+            echo "ECR exists, importing to state..."
+            terraform import aws_ecr_repository.your_ecr_resource_name your-account-id.dkr.ecr.us-east-1.amazonaws.com/your-ecr-repo-name
+          else
+            echo "ECR doesn't exist yet, will create on apply."
+          fi
+        env:
+          AWS_REGION: us-east-1
+              
       - name: terraform apply
         id: ecr-repo
         run: |
