--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Import Existing ECR (if any) # Check if ECR exists, then import to avoid recreation
         working-directory: ./terraform
         run: |
-          if aws ecr describe-repositories --repository-names todolist-app-registry --region ${{vars.AWS_REGION}} >/dev/null 2>&1; then
+          if aws ecr describe-repositories --repository-names todolist_app_registry --region ${{vars.AWS_REGION}} >/dev/null 2>&1; then
             echo "ECR exists, importing to state..."
-            terraform import aws_ecr_repository.todolist-app-registry 115229011275.dkr.ecr.us-east-1.amazonaws.com/todolist-app-registry
+            terraform import aws_ecr_repository.todolist_app_registry 115229011275.dkr.ecr.us-east-1.amazonaws.com/todolist_app_registry
           else
             echo "ECR doesn't exist yet, will create on apply."
           fi
