--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -11,7 +11,7 @@ permissions: read-all
 jobs:
 
   Setup-ECR:
-    runs-on: ubuntu-Latest
+    runs-on: ubuntu-latest
     environment: production
     defaults:
       run:
@@ -57,3 +57,38 @@ jobs:
         run: |
           terraform fmt
           terraform apply -auto-approve 
+
+  Dockerize-and-Push:
+    runs-on: ubuntu-latest
+    needs: Setup-ECR
+    environment: production
+    defaults:
+      run:
+        working-directory: ./docker-files  # Set working directory to docker folder for all steps
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{vars.AWS_REGION}}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+    
+      - name: Build and Push Image
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: todolist_app_registry
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker tag $REGISTRY/$REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:latest
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+          
