fixing the build context path

--- a/docker-files/Dockerfile
+++ b/docker-files/Dockerfile
@@ -2,7 +2,7 @@ FROM python:slim
 
 WORKDIR /app
 
-COPY ../ /app/
+COPY .. /app/
 RUN pwd
 RUN ls
 RUN pip install --no-cache-dir -r requirements.txt
