--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -62,9 +62,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: Setup-ECR
     environment: production
-    defaults:
-      run:
-        working-directory: ./docker-files  # Set working directory to docker folder for all steps
 
     steps:
       - name: Checkout Code
@@ -87,7 +84,7 @@ jobs:
           REPOSITORY: todolist_app_registry
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f docker-files/Dockerfile
           docker tag $REGISTRY/$REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:latest
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
