--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -84,7 +84,7 @@ jobs:
           REPOSITORY: todolist_app_registry
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f docker-files/Dockerfile
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f docker-files/Dockerfile .
           docker tag $REGISTRY/$REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:latest
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
